@@ -20,10 +20,10 @@ no_index:
     - inc
     - t
 requires:
-  Math::BigInt: 1.991
-  Math::BigInt::Calc: 0.56
+  Math::BigInt: 1.993
+  Math::BigInt::Calc: 1.993
   XSLoader: 0
   perl: 5.006
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.26
+version: 0.27
